<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/ic_sell"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_myAds"
        android:icon="@drawable/ic_ads"
        android:title="@string/title_my_adds" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>