<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/darkGrey">

            </View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_6">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:background="@drawable/box_grey_bg_white"

                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/edBrand"
                        android:hint="@string/brand">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/dp_10"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/edYear"
                        android:background="@drawable/box_grey_bg_white"
                        android:hint="@string/year">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:padding="@dimen/dp_8"
                    android:text="@string/ad_title"
                    android:textStyle="bold"

                    android:textColor="@color/black" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:padding="@dimen/dp_8"
                    android:textStyle="bold"
                    android:text="@string/mention_the_key"
                    android:textColor="@color/black" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"

                    android:id="@+id/edAdTitle"
                    />



                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dp_16"
                    android:padding="@dimen/dp_8"
                    android:text="@string/describe_what_selling"
                    android:textColor="@color/black" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/edDescribe" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:paddingStart="@dimen/dp_8"
                    android:textStyle="bold"
                    android:paddingEnd="@dimen/dp_8"
                    android:text="@string/include_conditions"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/edPrice"
                        android:background="@drawable/box_grey_bg_white"
                        android:hint="@string/price">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:background="@drawable/box_grey_bg_white"
                        android:id="@+id/edAddress"
                        android:hint="@string/str_address">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:id="@+id/edPhone"
                        android:background="@drawable/box_grey_bg_white"
                        android:hint="@string/str_phone">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/dp_8"
                    android:paddingStart="@dimen/dp_8"
                    android:textColor="@color/red"

                    android:text="@string/required_fields"
                    >

                </androidx.appcompat.widget.AppCompatTextView>





















            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_60"
                android:layout_gravity="bottom"

                android:gravity="bottom">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@color/blue2"
                    android:padding="@dimen/dp_12"
                    android:text="@string/next"

                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:id="@+id/text_view_next"/>


            </LinearLayout>






        </LinearLayout>









    </ScrollView>

</LinearLayout>