<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_grey_bg_white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            tools:ignore="Suspicious0dp">

            <ImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:scaleType="fitXY"
                android:layout_margin="@dimen/dp_2"
                android:id="@+id/myAddImageView"
                android:src="@drawable/building"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:textStyle="bold"
                    android:id="@+id/tvPrice"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:text="@string/_100_00"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:textStyle="bold"
                    android:id="@+id/tvAddress"
                    android:layout_marginTop="@dimen/dp_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:text="@string/hazratganj_lucknow"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dp_4"
                    android:id="@+id/tvBrand"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:text="@string/mobile_brand"
                    />


              <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  android:id="@+id/favButton"

                    android:background="@color/blue1"

                    android:layout_marginStart="@dimen/dp_4"
                  android:layout_marginTop="@dimen/dp_4"

                    android:text="@string/add_to_favourites"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_marginEnd="@dimen/dp_6"
                    android:padding="@dimen/dp_8"
                    android:textColor="@color/white"/>






                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:textStyle="bold"
                    android:id="@+id/tvdate"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dp_16"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:text="@string/_25_oct"
                    />



            </LinearLayout>









    </LinearLayout>

</LinearLayout>